// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllOptionalFields 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Preferences
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="preferences_bio"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Bio
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Bio"
                      aria-labelledby="preferences_bio react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="preferences_bio"
                      id="preferences_bio"
                      name="preferences.bio"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-hover="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-hover="true"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="preferences_website"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Website
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Website"
                      aria-labelledby="preferences_website react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="preferences_website"
                      id="preferences_website"
                      name="preferences.website"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-focus="true"
          data-focus-visible="true"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > ComplexExample 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          User Profile
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="profile_firstname"
                    id="react-aria-«replaced-aria-id»"
                  >
                    First Name
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="First Name"
                      aria-labelledby="profile_firstname react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="profile_firstname"
                      id="profile_firstname"
                      name="profile.firstName"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="profile_lastname"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Last Name
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Last Name"
                      aria-labelledby="profile_lastname react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="profile_lastname"
                      id="profile_lastname"
                      name="profile.lastName"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="profile_email"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Email
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Email"
                      aria-labelledby="profile_email react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="profile_email"
                      id="profile_email"
                      name="profile.email"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Address
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_street"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Street
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Street"
                      aria-labelledby="address_street react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="address_street"
                      id="address_street"
                      name="address.street"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_city"
                    id="react-aria-«replaced-aria-id»"
                  >
                    City
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="City"
                      aria-labelledby="address_city react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="address_city"
                      id="address_city"
                      name="address.city"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_zipcode"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Zip Code
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Zip Code"
                      aria-labelledby="address_zipcode react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="address_zipcode"
                      id="address_zipcode"
                      name="address.zipCode"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > MixedRequiredAndOptional 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Contact Info
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="contact_name"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Name
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Name"
                      aria-labelledby="contact_name react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="contact_name"
                      id="contact_name"
                      name="contact.name"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-hover="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-hover="true"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="contact_nickname"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Nickname
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Nickname"
                      aria-labelledby="contact_nickname react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="contact_nickname"
                      id="contact_nickname"
                      name="contact.nickname"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-focus="true"
          data-focus-visible="true"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > ObjectLevelErrorAlwaysShown 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] mb-4 is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-hover="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-hover="true"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="externalfield"
              id="react-aria-«replaced-aria-id»"
            >
              External Field
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="External Field"
                aria-labelledby="externalfield react-aria-«replaced-aria-id»"
                autocomplete="off"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="externalfield"
                id="externalfield"
                name="externalField"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value="trigger"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-danger-200 text-danger"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Email Settings
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-focus="true"
              data-focus-visible="true"
              data-focus-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-focus="true"
                  data-focus-visible="true"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="settings_primaryemail"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Primary Email
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Primary Email"
                      aria-labelledby="settings_primaryemail react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="settings_primaryemail"
                      id="settings_primaryemail"
                      name="settings.primaryEmail"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="settings_backupemail"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Backup Email
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Backup Email"
                      aria-labelledby="settings_backupemail react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                      data-slot="input"
                      data-testid="settings_backupemail"
                      id="settings_backupemail"
                      name="settings.backupEmail"
                      placeholder=" "
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="overflow: hidden;"
        >
          <div
            class="group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0 border-t block px-3 pb-2 pt-1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
            data-slot="helper-wrapper"
          >
            <div
              class="text-tiny text-danger"
              data-slot="error-message"
            >
              <ul
                aria-label="Validation errors of field settings"
                data-testid="settings_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    At least one email address is required
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValues 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Shipping Address
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-has-value="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_street"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Street
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Street"
                      aria-labelledby="address_street react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="address_street"
                      id="address_street"
                      name="address.street"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="123 Main St"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-has-value="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_city"
                    id="react-aria-«replaced-aria-id»"
                  >
                    City
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="City"
                      aria-labelledby="address_city react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="address_city"
                      id="address_city"
                      name="address.city"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="Springfield"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-has-value="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_zipcode"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Zip Code
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Zip Code"
                      aria-labelledby="address_zipcode react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="address_zipcode"
                      id="address_zipcode"
                      name="address.zipCode"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="12345"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithObjectLevelError 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-danger-200 text-danger"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Delivery Address
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="grid gap-4"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-has-value="true"
              data-invalid="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_street"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Street
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-describedby="react-aria-«replaced-aria-id»"
                      aria-invalid="true"
                      aria-label="Street"
                      aria-labelledby="address_street react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="address_street"
                      id="address_street"
                      name="address.street"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="a"
                    />
                  </div>
                </div>
                <div
                  class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
                  data-slot="helper-wrapper"
                >
                  <div
                    class="text-tiny text-danger"
                    data-slot="error-message"
                    id="react-aria-«replaced-aria-id»"
                  >
                    <ul
                      aria-label="Validation errors of field address_street"
                      data-testid="address_street_error"
                    >
                      <li
                        style="overflow: hidden;"
                      >
                        <div
                          class="px-1 pt-1"
                        >
                          Street must be at least 3 characters
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-has-value="true"
              data-invalid="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_city"
                    id="react-aria-«replaced-aria-id»"
                  >
                    City
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-describedby="react-aria-«replaced-aria-id»"
                      aria-invalid="true"
                      aria-label="City"
                      aria-labelledby="address_city react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      data-testid="address_city"
                      id="address_city"
                      name="address.city"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value="b"
                    />
                  </div>
                </div>
                <div
                  class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
                  data-slot="helper-wrapper"
                >
                  <div
                    class="text-tiny text-danger"
                    data-slot="error-message"
                    id="react-aria-«replaced-aria-id»"
                  >
                    <ul
                      aria-label="Validation errors of field address_city"
                      data-testid="address_city_error"
                    >
                      <li
                        style="overflow: hidden;"
                      >
                        <div
                          class="px-1 pt-1"
                        >
                          City must be at least 2 characters
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
              data-filled="true"
              data-filled-within="true"
              data-has-elements="true"
              data-has-helper="true"
              data-has-label="true"
              data-hover="true"
              data-invalid="true"
              data-required="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus"
                  data-hover="true"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <label
                    class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                    data-slot="label"
                    for="address_zipcode"
                    id="react-aria-«replaced-aria-id»"
                  >
                    Zip Code
                  </label>
                  <div
                    class="inline-flex w-full items-center h-full box-border"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-describedby="react-aria-«replaced-aria-id»"
                      aria-invalid="true"
                      aria-label="Zip Code"
                      aria-labelledby="address_zipcode react-aria-«replaced-aria-id»"
                      autocomplete="off"
                      class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger"
                      data-slot="input"
                      data-testid="address_zipcode"
                      id="address_zipcode"
                      name="address.zipCode"
                      placeholder=" "
                      required=""
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
                  data-slot="helper-wrapper"
                >
                  <div
                    class="text-tiny text-danger"
                    data-slot="error-message"
                    id="react-aria-«replaced-aria-id»"
                  >
                    <ul
                      aria-label="Validation errors of field address_zipcode"
                      data-testid="address_zipcode_error"
                    >
                      <li
                        style="overflow: hidden;"
                      >
                        <div
                          class="px-1 pt-1"
                        >
                          Field is required
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="overflow: hidden;"
        >
          <div
            class="group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0 border-t block px-3 pb-2 pt-1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
            data-slot="helper-wrapper"
          >
            <div
              class="text-tiny text-danger"
              data-slot="error-message"
              id="react-aria-«replaced-aria-id»"
            >
              <ul
                aria-label="Validation errors of field address"
                data-testid="address_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    Complete address required (street, city, and zip code)
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-focus="true"
          data-focus-visible="true"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
